# dnl-web-scraper

./: .gitignore  FOREWORD.md  README.md  docker-compose.yaml  pyproject.toml  tasks.py
api/: Dockerfile  app.py  constants.py  dependencies.py  models.py  requirements-api.txt
api/clients/: mongo.py
api/routers/: scrape.py
api/tests/clients/: test_mongo.py
scraper/: Dockerfile  constants.py  items.py  main.py  pipelines.py  requirements-scraper.txt  settings.py
